--- a/1-favoriteMovie/index.html
+++ b/1-favoriteMovie/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="resetCSS.css">
+    <link rel="stylesheet" href="styles.css">
     <title>master DOM manipulation: Part 1</title>
 </head>
 <body>
