--- a/1-favoriteMovie/index.html
+++ b/1-favoriteMovie/index.html
@@ -12,25 +12,15 @@
     <div id="container">
         <h1 id="main-heading">Favorite movie franchise</h1>
         <ul>
-            <li class="list-items">The Matrix</li>
+            <li class="list-items">
+                <span>Neo</span>
+                The Matrix</li>
             <li class="list-items">Star Wars</li>
             <li class="list-items">Harry Potter</li>
             <li class="list-items">Lord of the rings</li>
             <li class="list-items">Marvel</li>
         </ul>
     </div>
-
-    <div id="container">
-        <h1 id="main-heading">Favorite movie Sports</h1>
-        <ul>
-            <li class="list-items">The Matrix</li>
-            <li class="list-items">Star Wars</li>
-            <li class="list-items">Harry Potter</li>
-            <li class="list-items">Lord of the rings</li>
-            <li class="list-items">Marvel</li>
-        </ul>
-    </div>
-
 
     <script src="app.js"></script>
 
