--- a/1-favoriteMovie/index.html
+++ b/1-favoriteMovie/index.html
@@ -11,10 +11,9 @@
     
     <div id="container">
         <h1 id="main-heading">Favorite movie franchise</h1>
+        <!--Space between-->
         <ul>
-            <li class="list-items">
-                <span>Neo</span>
-                The Matrix</li>
+            <li class="list-items">The Matrix</li>
             <li class="list-items">Star Wars</li>
             <li class="list-items">Harry Potter</li>
             <li class="list-items">Lord of the rings</li>
