Direct event listenner - onclick method

--- a/2-Event-listeners/index.html
+++ b/2-Event-listeners/index.html
@@ -15,7 +15,7 @@
         
         <div class="boxes box-1">
             <h1 class="heading">Example 1</h1>
-            <button>Enter</button>
+            <button onclick="alert('I love javascript')">Enter</button>
         </div>
 
         <div class="boxes box-2">
