--- a/3-Event-listener-example/index.html
+++ b/3-Event-listener-example/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
@@ -16,7 +17,7 @@
             text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has
             survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
         </div>
-        
+
     </div>
 </body>
 </html>
