--- a/p1-quote-generator/index.html
+++ b/p1-quote-generator/index.html
@@ -19,22 +19,24 @@
 
     <div class="container">
         <div class="header">
-            <h2>Javascript Wuote Generator</h2>
+            <h2>Javascript Quote Generator</h2>
         </div>
 
         <div class="main-content">
             <div class="text-area">
                 <span class="quote">
-                    "The only thing we have to fear is fear itself."
+                    "Darkness cannot drive out darkness: only light can do that. Hate cannot drive out hate: only love can do that."
                 </span>
             </div>
-            <div class="person">Franklin D. Roosevelt</div>
+            <div class="person">Martin Luther King Jr</div>
 
             <div class="button-area">
                 <button id="new-quote">New Quote</button>
             </div>
         </div>        
     </div>
+
+    <script src="project-1.js"></script>
 
 </body>
 </html>
