--- a/p3-accordeon/index.html
+++ b/p3-accordeon/index.html
@@ -9,5 +9,20 @@
 </head>
 <body>
     
+    <div class="content-container">
+        <div class="question">What is the return policy</div>
+        <div class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum vero ducimus soluta dolorum autem amet. Adipisci, quo porro consectetur quasi illum dolorem cumque perspiciatis beatae exercitationem tempora nulla officia repellendus.</div>
+    </div>
+
+    <div class="content-container">
+        <div class="question">How many users do we have</div>
+        <div class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum vero ducimus soluta dolorum autem amet. Adipisci, quo porro consectetur quasi illum dolorem cumque perspiciatis beatae exercitationem tempora nulla officia repellendus.</div>
+    </div>
+
+    <div class="content-container">
+        <div class="question">What is the plan for future growth</div>
+        <div class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum vero ducimus soluta dolorum autem amet. Adipisci, quo porro consectetur quasi illum dolorem cumque perspiciatis beatae exercitationem tempora nulla officia repellendus.</div>
+    </div>
+
 </body>
 </html>
